--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,6 +3,9 @@
   become: true
   tasks:
 
+  - name: update repository index
+    apt:
+      update_cache: yes
 
   - name: install apache2 package
     apt:
