--- a/install_httpd.yml
+++ b/install_httpd.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: 192.168.56.116
+- hosts: kjmv@192.168.56.116
   become: true
   tasks:
 
   - name: install httpd package
-    apt:
+    sudo yum:
       name: apacheHttpd
