--- a/install_httpd.yml
+++ b/install_httpd.yml
@@ -1,8 +1,7 @@
 ---
 - hosts: kjmv@192.168.56.116
   become: true
-  tasks:
+  become_method: sudo
 
-  - name: install httpd package
-    sudo yum:
-      name: apacheHttpd
+  roles:
+   - apacheHttpd
