httpd install script

--- a/install_httpd.yml
+++ b/install_httpd.yml
@@ -13,7 +13,7 @@
       state: started
   - name: create firewall rule
     firewalld:
-      service: http
+      service: httpd
       zone: public
       permanent: yes
       immidiate: yes
