--- a/install_apache.yml
+++ b/install_apache.yml
@@ -17,3 +17,19 @@
     apt:
       name: libapache2-mod-php
     when: ansible_distribution == "Ubuntu"
+
+  - name: update repository index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "Centos"
+
+  - name: install apache2 package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "Centos"
+
+  - name: add PHP support for apache
+    dnf:
+      name: php
+    when: ansible_distribution == "Centos"
