--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,23 +4,14 @@
   become: true
   tasks:
 
-  - name: update repository index Ubuntu
-    apt:
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache2 and php package fro Ubuntu
+  - name: install apache2 and php package for Ubuntu
     apt:
       name: 
         - apache2
         - libapache2-mod-php
       state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index for CentOS
-    dnf:
       update_cache: yes
-    when: ansible_distribution == "CentOS"
+    when: ansible_distribution == "Ubuntu"
 
   - name: install apache2 and php package for CentOS
     dnf:
@@ -28,4 +19,5 @@
         - httpd
         - php
       state: latest
+      update_cache: yes
     when: ansible_distribution == "CentOS"
