--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,20 +4,10 @@
   become: true
   tasks:
 
-  - name: install apache2 and php package for Ubuntu
+  - name: install apache2 and php package
     apt:
       name: 
-        - apache2
-        - libapache2-mod-php
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
       update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache2 and php package for CentOS
-    dnf:
-      name: 
-        - httpd
-        - php
-      state: latest
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
